--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     line-height: 50px;
     text-decoration: none;
     font-size: 20px; 
+    
 }
 
 .nav-item a {
@@ -46,4 +47,32 @@ body {
   }
   .nav-item a:hover {
     color: #ea9606;
+  }
+
+  h1.section-title {
+    margin: 0;
+    padding: 0;
+  }
+
+  h2.section-title {
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+
+  
+
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .section {
+    width: 50%;
+    border: 1px solid grey;
+  }
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
   }
